--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
-  
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <!-- Turf.js -->
+  <script src="https://unpkg.com/@turf/turf@6.5.0/turf.min.js"></script>
 </head>
 <body>
 
@@ -116,15 +121,18 @@
   <h2>Your Roof Area</h2>
   <div id="staticLeafletMap" style="width: 100%; height: 300px; border: 1px solid #ccc; margin-bottom: 10px;"></div>
 
+
   <div style="text-align: center; margin-bottom: 10px;">
     <button id="backBtnStep6">Back</button>
     <button id="calculateCostBtn">Calculate Cost</button>
   </div>
 
   <div id="roofAreaDisplay" style="font-size: 20px; margin-top: 10px; text-align: center;">
-    <!-- Calculated area will appear here -->
+   
   </div>
-</div>
+</div> 
+
+
 
 
 
